# UDX12

./: .gitignore  CMakeLists.txt  README.md
include/UDX12/: Blob.h  CmdQueue.h  D3DInclude.h  Desc.h  DescriptorHeap.h  DescriptorHeapMngr.h  Device.h  FrameResource.h  FrameResourceMngr.h  FrameRsrcMngr.h  GCmdList.h  MeshGPUBuffer.h  MeshGeometry.h  ResourceDeleteBatch.h  UDX12.h  UploadBuffer.h  Util.h  VarSizeAllocMngr.h
include/UDX12/DescriptorHeap/: CPUDescriptorHeap.h  DescriptorHeapAllocMngr.h  DescriptorHeapAllocation.h  DescriptorHeapWrapper.h  DynamicSuballocMngr.h  GPUDescriptorHeap.h  IDescriptorAllocator.h
include/UDX12/FrameGraph/: Executor.h  Rsrc.h  RsrcMngr.h
include/UDX12/details/: FrameResource.inl  FrameRsrcMngr.inl  GCmdList.inl  UploadBuffer.inl
src/core/: Blob.cpp  CMakeLists.txt  CmdQueue.cpp  D3DInclude.cpp  Desc.cpp  DescriptorHeap.cpp  DescriptorHeapMngr.cpp  Device.cpp  FrameResource.cpp  FrameResourceMngr.cpp  FrameRsrcMngr.cpp  GCmdList.cpp  MeshGPUBuffer.cpp  MeshGeometry.cpp  ResourceDeleteBatch.cpp  UploadBuffer.cpp  Util.cpp  VarSizeAllocMngr.cpp  dxcapi.use.h
src/core/DescriptorHeap/: CPUDescriptorHeap.cpp  DescriptorHeapAllocMngr.cpp  DescriptorHeapAllocation.cpp  DescriptorHeapWrapper.cpp  DynamicSuballocMngr.cpp  GPUDescriptorHeap.cpp
src/core/FrameGraph/: Executor.cpp  RsrcMngr.cpp
src/test/00_init/: CMakeLists.txt  InitDirect3DApp.cpp
src/test/common/: CMakeLists.txt  DDSTextureLoader.h  UploadBuffer.h  d3dApp.cpp  d3dApp.h  d3dUtil.cpp  d3dUtil.h
